--- a/alecizett-website/cloud.html
+++ b/alecizett-website/cloud.html
@@ -52,11 +52,11 @@
               </div>
               <div class="card-body">
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>* Electrical and Computer Engineer</li>
+                  <li>* Computer and Electrical Engineer</li>
                   <li>* Graduate: May 2024 </li>
                   <li>* The University of Tulsa </li>
                   <li>* Tulsa, Oklahoma</li>
-                  <li>* Looking for an Internship!</li>
+                  <li>* Looking for a full time position!</li>
                   <li>* Software Engineering, Embedded Systems, and More!</li>
                 </ul>
               </div>
