--- a/alecizett-website/oscillator.html
+++ b/alecizett-website/oscillator.html
@@ -184,7 +184,7 @@
 <div class="container ">
 <div class="card mb-4">
 <div class="card-header">
-        <h4 class="my-0 font-weight-normal">Get in touch with Microsoft</h4>
+        <h4 class="my-0 font-weight-normal">Video Proof!</h4>
     </div>
 <div class="card-body">
     <div class="row">
