--- a/alecizett-website/projects.html
+++ b/alecizett-website/projects.html
@@ -69,11 +69,11 @@
       </div>
       <div class="card-body">
         <h1 class="card-title pricing-card-title">
-            Number 2
+            2023 Summer Internship
           <small class="text-muted"></small></h1>
         <ul class="list-unstyled mt-3 mb-4">
         </ul>
-        <a href="projects.html">
+        <a href="internship-presentation.html">
           <button type="button" class="btn btn-lg btn-block btn-primary">
             View It!
           </button>
