--- a/projects.html
+++ b/projects.html
@@ -75,7 +75,9 @@
         </ul>
         <a href="internship-presentation.html">
           <button type="button" class="btn btn-lg btn-block btn-primary">
+            <img src="assets/click_left.gif" height="25" width="50">
             View It!
+            <img src="assets/click_right.gif" height="25" width="50">
           </button>
         </a>
       </div>
@@ -86,7 +88,7 @@
       </div>
       <div class="card-body">
         <h1 class="card-title pricing-card-title">
-            Number 3
+            WIP
           <small class="text-muted"></small></h1>
         <ul class="list-unstyled mt-3 mb-4">
         </ul>
